# nyxis

./: .gitignore  AGENTS.md  BENCHMARK.md  BENCHMARK_SUITE.md  COMMERCIAL.md  CONFORMANCE.md  CONTRIBUTING.md  EXPLAINER.md  GETTING_STARTED.md  GOVERNANCE.md  LICENSE  MANIFESTO.md  Makefile  NXS_v1.3.md  OLAP.md  README.md  RFC.md  SCENARIOS.md  SPEC.md  docker-compose.yml
.github/workflows/: README.md  bench.yml  build-wasm.yml  conformance.yml  publish-crates.yml  rust.yml
bench/: .gitignore  BENCHMARK_VERSIONS.md  Makefile  README.md  bench.html  bench.js
bench/generators/: codegen.sh  gen.py  pyproject.toml  requirements.txt  sparse_fields.py  transcode.py
bench/generators/transcode_rust/: Cargo.toml
bench/generators/transcode_rust/src/: main.rs
bench/harness/rust/: Cargo.toml
bench/harness/rust/src/: main.rs
bench/harness/stream_d/: Cargo.toml  build.rs
bench/harness/stream_d/src/: main.rs
bench/methodology/: workload_A.md  workload_B.md  workload_C.md  workload_D.md  workload_E.md  workload_F.md
bench/schemas/: dense8.arrow.json  dense8.capnp  dense8.fbs  dense8.nxs  dense8.proto  flat8.capnp  flat8.fbs  flat8.nxs  flat8.proto  sparse.capnp  sparse.fbs  sparse.nxs  sparse.proto
bench/scripts/: drop_caches.sh  freeze_benchmark_md.py  render_tables.py  report.py  run_all.sh  save_results.sh  setup_venv.sh  verdicts.py
bench/wasm/: README.md  nxs_reducers.wasm
conformance/: README.md  all_sigils.expected.json  all_sigils.nxb  bad_dict_hash.expected.json  bad_dict_hash.nxb  bad_magic.nxb  columnar_flat8_dense_100.expected.json  columnar_flat8_sparse_10pct_100.expected.json  columnar_flat8_sparse_10pct_100.nxb  columnar_flat8_strings_100.expected.json  columnar_flat8_strings_100.nxb  columnar_invalid_flags_both.expected.json  columnar_invalid_flags_both.nxb  columnar_invalid_streaming.expected.json  columnar_invalid_streaming.nxb  generate.rs  jumbo_string.expected.json  jumbo_string.nxb  large.expected.json  large.nxb  list_f64.expected.json  list_f64.nxb  list_i64.expected.json  list_i64.nxb  max_keys.expected.json  max_keys.nxb  minimal.expected.json  minimal.nxb  nested.expected.json  nested.nxb  null_vs_absent.expected.json  null_vs_absent.nxb  pax_flat8_dense_p256_1000.expected.json  pax_flat8_dense_p256_1000.nxb  pax_flat8_sparse_10pct_p256.expected.json  pax_flat8_sparse_10pct_p256.nxb  pax_flat8_strings_p128_300.expected.json  pax_flat8_strings_p128_300.nxb  pax_invalid_page_magic.expected.json  pax_invalid_page_magic.nxb  (+17 more)
conformance/prefetch/: README.md  prefetch_cancel.expected.json  prefetch_cancel.nxb  prefetch_columnar_fast_path.expected.json  prefetch_columnar_fast_path.nxb  prefetch_sequential_upgrade.expected.json  prefetch_sequential_upgrade.nxb  prefetch_sparse_50.expected.json  prefetch_sparse_50.nxb  run_prefetch_js.sh
conformance/v13/: compact_dense_multi_10.expected.json  compact_dense_multi_10.nxb  compact_logs_dense_20.expected.json  compact_logs_dense_20.nxb  compact_sparse_100.expected.json  compact_sparse_100.nxb  compact_streaming_unsealed.expected.json  compact_streaming_unsealed.nxb
context/plans/: 2026-05-20-nyxis-extensions-phase-1.md  2026-05-20-nyxis-extensions-phase-2.md  2026-05-20-nyxis-extensions-phase-3.md  2026-05-20-nyxis-extensions-phase-4.md  2026-05-20-nyxis-extensions-phase-5.md  2026-05-20-nyxis-extensions.md
demo/: Dockerfile  README.md  explorer.html  index.html  theme.css  theme.js  ticker.html  wal.html  workers.html
docker/: agent-discovery.conf  markdown-routes.map  markdown-tokens.conf  nginx.conf
docs/: RELEASE_TAGS.md  adaptive-prefetch-driver-matrix.md  adaptive-prefetch.md
docs/index/: _root.md  c_reader.md  ci_workflows.md  conformance.md  conformance_runners.md  go_reader.md  mcp_server.md  spec_format.md
examples/: product_catalog.nxs  span_trace.nxs  timeseries.nxs  user_profile.nxs
mcp/: errors.go  go.mod  go.sum  main.go  resolver.go  resources.go  tools.go  tools_test.go
rust/: Cargo.toml  README.md  build.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_writer_roundtrip.rs
rust/proto/: registry.proto
rust/src/: arrow_project.rs  bench.rs  col_reduce.rs  column_prefetch.rs  compact.rs  compiler.rs  consts.rs  decoder.rs  error.rs  gen_fixtures.rs  layout.rs  lexer.rs  lib.rs  main.rs  parser.rs  pax_stream.rs  prefetch.rs  query.rs  segment_reader.rs  stats.rs  stream_reader.rs  wal.rs  wasm_api.rs  writer.rs
rust/src/convert/: csv_in.rs  csv_out.rs  infer.rs  inspect.rs  json_in.rs  json_out.rs  mod.rs  xml_in.rs
rust/src/prefetch/: mod.rs  pattern.rs
rust/src/registry/: client.rs  mod.rs  preamble.rs
rust/tests/: go_producer_roundtrip.rs  registry_cli.rs
rust/tests/convert/: e2e.rs  exit_codes.rs  json_import.rs
scripts/: bench-sequential.sh
site/: index.html  robots.txt  sitemap.xml
site/bench/: README.md  bench-run.js  bench-worker.js  bench.js  index.html
site/demo/: Dockerfile  README.md  (+15 more)
(+146 files in other folders)
