[project]
name = "nyxis-bench-generators"
version = "0.0.0"
description = "Cross-format benchmark JSON generators and binary transcoders"
requires-python = ">=3.11,<3.15"
dependencies = [
    "protobuf>=7.34",
    "flatbuffers>=24.3.25",
    "pycapnp>=2.0",
    "pyarrow>=18.0,<22; python_version < '3.14'",
    "pyarrow>=22.0; python_version >= '3.14'",
]

[tool.uv]
package = false
