[project]
name = "nyxis-bench-generators"
version = "0.0.0"
description = "Cross-format benchmark JSON generators and binary transcoders"
requires-python = ">=3.11,<3.15"
dependencies = [
    "protobuf>=7.34",
    "flatbuffers>=24.3.25",
    "pyarrow>=18.0,<22; python_version < '3.14'",
    "pyarrow>=22.0; python_version >= '3.14'",
]

# pycapnp supports 3.14 (https://github.com/capnproto/pycapnp) but PyPI 2.2.2 has no cp314
# wheels yet — uv/pip compile from source (slow). Optional group: fast default sync; use
# Python 3.12/3.13 + BENCH_WITH_CAPNP=1 for prebuilt wheels when you need Python capnp.
[dependency-groups]
capnp = ["pycapnp>=2.0"]

[tool.uv]
package = false
