[package]
name = "nxs-fuzz"
version = "1.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nyxis]
path = ".."

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_writer_roundtrip"
path = "fuzz_targets/fuzz_writer_roundtrip.rs"
test = false
doc = false
bench = false
