[package]
name = "bench-transcode"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }

[dependencies.nxs]
package = "nyxis"
path = "../../../rust"
default-features = false

[profile.release]
lto = true
codegen-units = 1
