[package]
name = "bench-harness"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"

[dependencies.nxs]
package = "nyxis"
path = "../../../rust"
default-features = false

[profile.release]
lto = true
