[package]
name = "bench-stream-d"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nyxis = { package = "nyxis", path = "../../../rust", default-features = false }
capnp = "0.20"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
libc = "0.2"

[build-dependencies]
capnpc = "0.20"
prost-build = "0.13"

[profile.release]
lto = true
